[develop] updated scrollbar corner style bug.

--- a/src/assets/scss/UI.component.scss
+++ b/src/assets/scss/UI.component.scss
@@ -3338,4 +3338,7 @@ position:relative;
 			background: rgba(100,100,100,.5);
 		}
 	}
+  	&::-webkit-scrollbar-corner {
+		background: none;
+  	}
 }
